@@ -1,5 +1,11 @@
 2008-08-15  Dan Williams  <dcbw@redhat.com>
 
+	* src/connection-editor/page-ip4.c
+		- (ip4_private_init): show connection type in IPv4 method text
+			(bgo #544385)
+
+2008-08-15  Dan Williams  <dcbw@redhat.com>
+
 	* src/wired-dialog.c
 		- (dialog_init): use standard icon theme icons
 
